feat: gate the SPD family and pick thresholds by the active kernels